--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <div class="preview-card">
+        <div class="product-img">
+
+        </div>
+
+        <div class="product-info">
+            <p>PERFUME</p>
+            <h1>Gabrielle Essence Eau De Parfum</h1>
+            <p>
+                A floral, solar and voluptuous interpretation
+                composed by Olivier Polge,
+                Perfumer-Creator for the House of CHANEL.
+            </p>
+           <div class="product-cost">
+                <h1>$149.99</h1>
+                <p>$169.99</p>
+           </div> 
+            <button>
+                <img src="./media/icon-cart.svg" alt="" srcset="">
+                Add to Cart
+            </button>
+        </div>
+        
+    </div>
 </body>
 </html>
