--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 composed by Olivier Polge,
                 Perfumer-Creator for the House of CHANEL.
             </p>
-           <div class="product-cost">
+           <div class="product-cost-wrapper">
                 <h1>$149.99</h1>
                 <p>$169.99</p>
            </div> 
