added mobile content responsiveness

--- a/index.html
+++ b/index.html
@@ -8,29 +8,29 @@
 </head>
 <body>
 
-    <div class="preview-card">
-        <div class="product-img">
-
+    <div class="card-contain">
+        <div class="preview-card">
+            <div class="product-img">
+            </div>
+            <div class="product-info">
+                <p>PERFUME</p>
+                <h1>Gabrielle Essence Eau De Parfum</h1>
+                <p>
+                    A floral, solar and voluptuous interpretation
+                    composed by Olivier Polge,
+                    Perfumer-Creator for the House of CHANEL.
+                </p>
+               <div class="product-cost-wrapper">
+                    <h1>$149.99</h1>
+                    <p>$169.99</p>
+               </div>
+                <button>
+                    <img src="./media/icon-cart.svg" alt="" srcset="">
+                    Add to Cart
+                </button>
+            </div>
         </div>
-
-        <div class="product-info">
-            <p>PERFUME</p>
-            <h1>Gabrielle Essence Eau De Parfum</h1>
-            <p>
-                A floral, solar and voluptuous interpretation
-                composed by Olivier Polge,
-                Perfumer-Creator for the House of CHANEL.
-            </p>
-           <div class="product-cost-wrapper">
-                <h1>$149.99</h1>
-                <p>$169.99</p>
-           </div> 
-            <button>
-                <img src="./media/icon-cart.svg" alt="" srcset="">
-                Add to Cart
-            </button>
-        </div>
-        
     </div>
+
 </body>
 </html>
